# sd-utils

./: .gitignore  README.md  pyproject.toml  xelatex100364.fls
src/sd_utils/: advancement_charts.py  main.py  todo_lists.py  utils.py
src/sd_utils/templates/: todo_template.tex
