[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-utils"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "typer>=0.16.0",
    "xlsxwriter>=3.2.5",
]

[project.scripts]
sd-utils = "sd_utils:main.cli_entrypoint"

[tool.setuptools.package-data]
"sd_utils.templates" = ["*.tex"]